预约功能实现

--- a/templates/base.html
+++ b/templates/base.html
@@ -130,6 +130,7 @@
             </li>
             <li><a href="{{ url_for('account.profile') }}">查看个人信息</a></li>
             <li><a href="#">查看交易历史</a></li>
+            <li><a href="{{ url_for('house.view_appointments') }}">查看预约</a></li> <!-- 新增按钮 -->
             <li><a href="{{ url_for('account.logout') }}">退出登录</a></li>
         </ul>
     </div>
