--- a/templates/base.html
+++ b/templates/base.html
@@ -131,6 +131,11 @@
             <li><a href="{{ url_for('account.profile') }}">查看个人信息</a></li>
             <li><a href="#">查看交易历史</a></li>
             <li><a href="{{ url_for('house.view_appointments') }}">查看预约</a></li> <!-- 新增按钮 -->
+            
+            
+            <li><a href="{{ url_for('feedback.complaint') }}">投诉&反馈</a></li>
+            
+            
             <li><a href="{{ url_for('account.logout') }}">退出登录</a></li>
         </ul>
     </div>
